Bug 1616277 - Avoid unintentially changing the contents of the weak ref map while sweeping r=sfink

Depends on D63188

Differential Revision: https://phabricator.services.mozilla.com/D63190